finally got Multi-Release in the manifest of package